--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,10 @@ doctype 5
 html
   head
     title= title
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
+    link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    include shared/nav
+    include shared/mixins
     block content
