Added create Posts
Added server side validation
Validation summary mixin
Created node a central store for magic strings routes and views

--- a/views/posts/details.jade
+++ b/views/posts/details.jade
@@ -8,3 +8,5 @@ block postContent
     hr
     div.intro
         !{markDown(activePost.intro)}
+    div.extended
+        !{markDown(activePost.extended)}
