--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,8 +2,8 @@ doctype 5
 html
   head
     title= title
-    link(rel='stylesheet', href='/stylesheets/bootstrap.css')
-    link(rel='stylesheet', href='/stylesheets/bootstrap-responsive.css')
+    meta(name='viewport', content='width=device-width, initial-scale=1.0')
+    link(rel='stylesheet', href='/stylesheets/bootstrap.css',media="screen")
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     include shared/nav
