--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -2,9 +2,9 @@ extends ../layout
 
 block content
 
-    div.container-fluid
-        div.row-fluid
-            div.span3
+    div.container
+        div.row
+            div.col-lg-3
                 table.table
                     thead
                         tr
@@ -13,5 +13,5 @@ block content
                         tr
                             td
                                 +postLink(post)
-            div.span9
+            div.col-lg-9
                 block postContent
