Added post update
Added updating of posts

--- a/views/posts/details.jade
+++ b/views/posts/details.jade
@@ -6,6 +6,7 @@ block postContent
         | by #{activePost.author}
     small.muted #{fromNow(activePost.published)}
     hr
+    a(href='#{node.posts.editRoute(activePost)}') Edit
     div.intro
         !{markDown(activePost.intro)}
     div.extended
