Added angular functionality
Site can be set into angular mode by changing variable in main app.js
file, This will output angular views and js files.

I've added angular test scripts and e2e tests as well as support for
running test runner page.

--- a/views/home/index.jade
+++ b/views/home/index.jade
@@ -1,5 +1,7 @@
 extends ../layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    div.container
+        div.row
+            div.col-lg-12
+                p Welcome to #{title}
