--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -15,3 +15,5 @@ block content
                                 +postLink(post)
             div.col-lg-9
                 block postContent
+                if !activePost
+                    p Select Post on left
