--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -5,3 +5,11 @@ body {
 .about {
     margin-left: 15px;
 }
+
+#posts{
+    list-style: none;
+    padding-left: 0px;
+}
+#posts > li{
+    padding-top: 5px;
+}
