--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,11 +1,17 @@
 doctype 5
-html
+html(ng-app)
   head
     title= title
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/stylesheets/bootstrap.css',media="screen")
     link(rel='stylesheet', href='/stylesheets/style.css')
+    if isAngular
+    script(type='text/javascript', src='/javascript/lib/angular.js')
+    script(type='text/javascript', src='/javascript/app/postController.js')
   body
     include shared/nav
-    include shared/mixins
-    block content
+    if !isAngular
+        include shared/mixins
+        block content
+    if isAngular
+        include angular/angular
