--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,17 +1,20 @@
 doctype 5
-html(ng-app)
+html(ng-app="blogR")
   head
     title= title
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     link(rel='stylesheet', href='/stylesheets/bootstrap.css',media="screen")
+    link(rel='stylesheet', href='/stylesheets/bootstrap-theme.css',media="screen")
     link(rel='stylesheet', href='/stylesheets/style.css')
-    if isAngular
-    script(type='text/javascript', src='/javascript/lib/angular.js')
-    script(type='text/javascript', src='/javascript/app/postController.js')
   body
     include shared/nav
     if !isAngular
         include shared/mixins
         block content
     if isAngular
-        include angular/angular
+        div#main-container.container
+            div(ng-view)
+    script(type='text/javascript', src='//codeorigin.jquery.com/jquery-2.0.3.min.js')
+    script(type='text/javascript', src='/javascript/lib/bootstrap.js')
+    if isAngular
+        include shared/angular-scripts
